SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <description>Defines the terms of delivery, cost responsibilities, and risk allocation between buyers and sellers in international transactions.</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterms</valueSetName>
    </valueSet>
</CustomField>