SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Incoterms_location__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_location__c</fullName>
    <description>Specify the location relevant to the selected Incoterm</description>
    <label>Incoterms location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>