SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <description>Represents the number of days required to process an order, from receipt to shipment or delivery</description>
    <inlineHelpText>Enter the number of days required to process the order, from receipt to shipment or delivery.</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>