SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/MTS_MTO__c.field-meta.xml
<CustomField>
    <fullName>MTS_MTO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product is produced based on Make-to-Stock (MTS) or Make-to-Order (MTO</description>
    <label>MTS/MTO</label>
    <type>Checkbox</type>
</CustomField>