SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Old_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Price__c</fullName>
    <description>Stores the original price of the quote line item before any discounts or adjustments. This is used to track price changes over time for reporting and auditing purposes</description>
    <label>Old Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>