SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <description>This field helps categorize the product based on its packaging type, which is essential for logistics and inventory management</description>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>IBC (Tote)</fullName>
            </value>
            <value>
                <fullName>RT (Road Tanker)</fullName>
            </value>
            <value>
                <fullName>RTC (Rail Tank Car)</fullName>
            </value>
            <value>
                <fullName>TC (Tank Container)</fullName>
            </value>
            <value>
                <fullName>FB (Flexibags)</fullName>
            </value>
            <value>
                <fullName>BB (Big Bags)</fullName>
            </value>
            <value>
                <fullName>Bag (Sack)</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>