SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Quantity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field links the quantity on the record to a specific unit of measurement (e.g., kg, liters, pieces), enabling accurate tracking, conversion, and reporting</description>
    <label>Quantity Unit</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>