SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Quote_Product_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field stores the unique identifier of the quote product as referenced in an external system. It will be only used for Data migration</description>
    <externalId>true</externalId>
    <inlineHelpText>Only for Data migration</inlineHelpText>
    <label>Quote Product External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>