SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the recipient or destination where the product or service is being shipped. Used for logistics and delivery tracking.</description>
    <label>Ship-To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>