SynProdGITV1/force-app/main/default/objects/QuoteLineItem/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <description>This field captures the time taken for a product or service to reach the customer after dispatch. Useful for tracking delivery performance.</description>
    <label>Transit Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>